proyecto-lfsrsoft/k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lfsr-backend
  namespace: lfsrsoft
  labels:
    app: lfsr-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: lfsr-backend
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: lfsr-backend
    spec:
      serviceAccountName: licencia-generator-sa
      imagePullSecrets:
        - name: docker-credentials
      containers:
        - name: lfsr-backend
          image: docker.io/uriel0331dls/lfsr-backend:v1
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
            failureThreshold: 3
          resources:
            requests:
              cpu: "100m"
              memory: "64Mi"
            limits:
              cpu: "300m"
              memory: "256Mi"
