proyecto-lfsrsoft/k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lfsr-frontend
  namespace: lfsrsoft
  labels:
    app: lfsr-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: lfsr-frontend
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: lfsr-frontend
    spec:
      imagePullSecrets:
        - name: docker-credentials
      containers:
        - name: lfsr-frontend
          image: docker.io/uriel0331dls/lfsr-frontend:v7
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 20
            periodSeconds: 5
            failureThreshold: 3
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "300m"
              memory: "256Mi"
