proyecto-lfsrsoft/k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lfsr-frontend-service
  namespace: lfsrsoft
  labels:
    app: lfsr-frontend
spec:
  type: NodePort
  selector:
    app: lfsr-frontend
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30080
